--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -65,3 +65,33 @@ jobs:
           path: |
             ${{ env.SRC_PATH }}
             !venv/
+            
+  deploy:
+    permissions:
+      contents: none
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Development'
+    #   url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: python-app
+          path: .
+
+      - uses: Azure/login@v1
+        with:
+          creds: '{"clientId":"${{ secrets.ARM_CLIENT_ID }}","clientSecret":"${{ secrets.ARM_CLIENT_SECRET }}","subscriptionId":"${{ secrets.ARM_MGMT_SUBID }}","tenantId":"${{ secrets.ARM_TENANT_ID }}"}'
+
+      - name: Deploy web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          package: "." #${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+      - name: Azure_Logout
+        run: |
+          az logout
