--- a/src/akabackend/requirements.txt
+++ b/src/akabackend/requirements.txt
@@ -1,29 +1,50 @@
-aniso8601==9.0.1
-opencensus
-opencensus-ext-flask
-opencensus-ext-azure
 async-timeout==4.0.2
+azure-core==1.26.1
+azure-identity==1.12.0
+cachetools==5.2.0
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
+cryptography==39.0.0
+decorator==5.1.1
 Flask==2.2.2
-Flask-RESTful==0.3.9
+google-api-core==2.11.0
+google-auth==2.15.0
+googleapis-common-protos==1.57.1
 greenlet==2.0.1
 idna==3.4
-importlib-metadata==5.2.0
+importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+load-dotenv==0.1.0
 MarkupSafe==2.1.1
-pip==22.3.1
+msal==1.20.0
+msal-extensions==1.0.0
+opencensus==0.11.0
+opencensus-context==0.1.3
+opencensus-ext-azure==1.1.7
+opencensus-ext-flask==0.8.1
+pip==21.2.4
+portalocker==2.6.0
+protobuf==4.21.12
+psutil==5.9.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+PyJWT==2.6.0
 pyodbc==4.0.35
 python-dotenv==0.21.0
-pytz==2022.7
+pywin32==305
 redis==4.4.0
 requests==2.28.1
+rsa==4.9
 setuptools==58.1.0
 six==1.16.0
-SQLAlchemy==1.4.45
+SQLAlchemy==1.4.46
+typing_extensions==4.4.0
 urllib3==1.26.13
+validators==0.20.0
 Werkzeug==2.2.2
 zipp==3.11.0
